compiler/tests/fixtures/compile_errors/numeric_capacity_mismatch/u128_pos.fe
contract Foo:
    pub def bar() -> u128:
        return u128(340282366920938463463374607431768211456)